kubernetes/network_policies/apprise-consumer-virtualService.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: oci-apprise-consumer-prod
  namespace: analyplat
spec:
  gateways:
  # This tells the virtual service to use the gateway resource in your workspace.
  - analyplat/oci-apprise-consumer-prod
  podSelector:
    matchLabels:
      networking/allow-internet-egress: "true"
